--- a/package.json
+++ b/package.json
@@ -1,5 +1,20 @@
 {
+  "name": "tpfinal",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "type": "module",
+  "scripts": {
+    "start": "node --env-file .env .",
+    "dev": "node --env-file .env --watch .",
+    "seed": "node --env-file .env seed/roleSeed.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "dependencies": {
-    "express": "^4.19.2"
+    "env": "^0.0.2",
+    "express": "^4.19.2",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.10.0",
+    "sequelize": "^6.37.3"
   }
 }
